...
    </dependencies>
    <scenes>
        <!--Preferences Window-->
        <scene sceneID="Y5a-2n-2Fw">
            <objects>
                <windowController showSeguePresentationStyle="single" id="wX1-wt-O0y" userLabel="Preferences Window" sceneMemberID="viewController">
                    <window key="window" title="PeyeDF Preferences" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="5Wr-n7-ggT">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES" resizable="YES"/>
                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                        <rect key="contentRect" x="425" y="461" width="480" height="270"/>
                        <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
                        <connections>
                            <outlet property="delegate" destination="wX1-wt-O0y" id="YmO-Up-rL0"/>
...
            </objects>
            <point key="canvasLocation" x="519" y="-1548"/>
        </scene>
        <!--Experiment-->
        <scene sceneID="WdR-1t-XOS">
            <objects>
                <viewController title="Experiment" id="bHM-3n-NND" customClass="ExperimentPreferencesController" customModule="PeyeDF" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" id="9oH-vu-xuj">
                        <rect key="frame" x="0.0" y="0.0" width="451" height="517"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <subviews>
                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fcv-fJ-S98">
                                <rect key="frame" x="18" y="310" width="76" height="17"/>
...
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
                                                <action selector="orderFrontStandardAboutPanel:" target="Ady-hI-5gd" id="Exp-CZ-Vem"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
                                        <menuItem title="Preferences…" keyEquivalent="," id="BOF-NM-1cW">
                                            <connections>
                                                <segue destination="wX1-wt-O0y" kind="show" id="zKF-jq-Ats"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem isSeparatorItem="YES" id="wFC-TO-SCJ"/>
                                        <menuItem title="Services" id="NMo-om-nkz">
...
