...
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zhw-6m-xb8">
                                <rect key="frame" x="553" y="283" width="95" height="32"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="83" id="KMA-AU-bIE"/>
                                    <constraint firstAttribute="height" constant="21" id="xNM-Ne-1jh"/>
                                </constraints>
                                <buttonCell key="cell" type="push" title="Continue" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="qY9-Lv-Xom">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <accessibility description="Continue"/>
                                <connections>
                                    <action selector="continueButtonPress:" target="AkP-9C-mqL" id="rOK-7u-ooX"/>
...
                                    <constraint firstAttribute="width" constant="54" id="KEw-VB-xxo"/>
                                    <constraint firstAttribute="height" constant="66" id="ZgW-KG-Ajm"/>
                                </constraints>
                            </box>
                            <button hidden="YES" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="lnL-1l-8hs">
                                <rect key="frame" x="267" y="13" width="89" height="32"/>
                                <buttonCell key="cell" type="push" title="Confirm" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="tXg-6f-aw5">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <accessibility description="Confirm"/>
                                <connections>
                                    <action selector="confirmButtonPress:" target="AkP-9C-mqL" id="Yek-rw-k0A"/>
...
